@startuml

title __MINIPROJEK's Class Diagram__\n

  namespace org.example {
    class org.example.JavaMailUtil {
    }
  }
  

  namespace org.example {
    class org.example.ViewModel {
    }
  }
  

  namespace org.example {
    class org.example.extractTxt {
    }
  }
  

  namespace org.example {
    class org.example.main {
    }
  }
  

  org.example.ViewModel .up.|> javafx.event.EventHandler
  org.example.ViewModel o-- org.example.JavaMailUtil : util
  org.example.main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
